Fix spacing on frontpage for mobile and pc

--- a/frontend/src/frontpage/frontPageStyles.css
+++ b/frontend/src/frontpage/frontPageStyles.css
@@ -32,23 +32,23 @@
 
 .frontpage-button {
   width: 1000px;
-  margin-top: 100px;
+  margin-top: 0;
 }
 
 #mascot {
-  margin: 100px auto 0 auto;
+  margin: 0 auto 0 auto;
 }
 
 @media (max-device-width: 500px) {
   #mascot img {
-    transform: scale(0.5, 0.5);
+    transform: scale(0.75, 0.75);
   }
 
   .about-us {
   }
   .frontpage-button {
     width: auto;
-    margin-top: 100px;
+    margin-top: 0;
   }
 }
 
